--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,9 @@ jobs:
       - run:
           name: "Running the Unit Tests"
           command: "coverage run tests/sanity.py"
+      - run:
+          name: "Sending coverage reports to CodeCov"
+          command: "bash <(curl -s https://codecov.io/bash)"
 workflows:
   version: 2
   test:
