fix: pinning the versions of the packages

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,17 @@
-pandas
-gensim
-nltk
-python-twitter
-spacy
-gsheets
-pyLDAvis
-matplotlib
-scikit-learn
-networkx
-google-auth-httplib2
-google-api-python-client
-sklearn
-xmltodict
-sendgrid
-BeautifulSoup4
-html5lib
-tensorflow
-yapf
-coverage
-codecov
-pre-commit
-jsonschema
+pandas==1.1.2
+gensim==3.8.3
+nltk==3.5
+python-twitter==3.5
+spacy==2.3.2
+gsheets==0.5.1
+scikit-learn==0.23.2
+xmltodict==0.12.0
+sendgrid===6.4.1
+BeautifulSoup4==4.9.3
+html5lib==1.1
+tensorflow==2.2.0
+yapf==0.30.0
+coverage==5.1
+codecov==2.1.7
+pre-commit==2.5.1
+jsonschema==3.2.0
