Add the capability to fetch data from Elasticsearch api (#29)
* Add the capability to fetch data from Elasticsearch api

* merge write_query_results functions in a single method

* Add additional argument to give query and format from command line

* Update spaces and  indentations

Update spaces and indentations

* Add directory creation if not exists

1) Add directory creation if not exists
2) Update default query index to 'None'
3) Update .gitignore
4) Remove directory structure

* Update default query index to ""

Update default query index to ""

* Refactor write_query_results

Refactor write_query_results

Co-authored-by: aaggarwal1 <aditi_aggarwal@intuit.com>

--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ data/**/*.csv
 data/**/*.h5
 data/**/*.html
 
-# Emabling sample-data
+# Enabling sample-data
 !data/raw_data/sample-mint/*
 !data/parsed_data/sample-mint/*
 !data/processed_data/sample-mint/*
