--- a/app/sample-mint-config.json
+++ b/app/sample-mint-config.json
@@ -82,7 +82,8 @@
             "parsed_data_folder": "parsed_data",
             "processed_data_folder": "processed_data",
             "models_folder": "models",
-            "emails_folder": "emails"
+            "emails_folder": "emails",
+            "query_response_folder": "query_response_data"
         }
     }
 }
