fix: adding user_id and some bug fixes (#42)
* fix: adding user_id and some bug fixes

* fix: adding user_id and some bug fixes

* fix: adding user_id and some bug fixes

--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,9 @@ scripts/fawkes-secrets.env
 storages.json
 
 # App Config related
-app/*.csv
-app/*.json
-app/*.py
+app/**/*.csv
+app/**/*.json
+app/**/*.py
 !app/fawkes-config.json
 !app/bug-feature-keywords.json
 !app/category-keywords.json
