--- a/app/sample-mint-config.json
+++ b/app/sample-mint-config.json
@@ -66,6 +66,7 @@
             "timezone": "US/Pacific",
             "message_key": "content",
             "rating_key": "rating",
+            "rating_max_value": 5.0,
             "app_id": "300238550",
             "country": "us",
             "user_id_key": null,
@@ -82,6 +83,7 @@
             "timezone": "UTC",
             "message_key": "reviewText",
             "rating_key": "overall",
+            "rating_max_value": 5.0,
             "user_id_key": null
         },
         {
@@ -95,6 +97,7 @@
             "timezone": "UTC",
             "message_key": "content",
             "rating_key": "rating",
+            "rating_max_value": 5.0,
             "host": "localhost",
             "port": 443,
             "username": "user",
