--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-pandas==1.1.3
-nltk==3.5
-python-twitter==3.5
-gsheets==0.5.1
-scikit-learn==0.23.2
-xmltodict==0.12.0
-sendgrid===6.4.1
-BeautifulSoup4==4.9.3
-html5lib==1.1
-tensorflow==2.3.1
-yapf==0.30.0
-coverage==5.3
-codecov==2.1.10
-pre-commit==2.7.1
-jsonschema==3.2.0
-splunk-sdk==1.6.14
-numpy==1.19.2
-tensorflow_hub==0.10.0
+pandas
+nltk
+python-twitter
+gsheets
+scikit-learn
+xmltodict
+sendgrid
+BeautifulSoup4
+html5lib
+tensorflow
+yapf
+coverage
+codecov
+pre-commit
+jsonschema
+splunk-sdk
+numpy
+tensorflow_hub
