feat: Summarisation of user reviews #Issue17 (#60)
* initial changes for summarizer

* removing comments

* running summraization code

* refactored code for summarizer

* fix: code refactoring

* adding comments, bug fixes

* fix feedback json file

* fix extra spaces

* fix extra spaces

* fix merge conflict

* fix: addressed review comments

* fix: minor fixes

* fix: addressed review comments

Co-authored-by: Rajput <you@example.com>
Co-authored-by: Rohit Jain <Rohit_Jain@intuit.com>

--- a/app/sample-mint-config.json
+++ b/app/sample-mint-config.json
@@ -51,6 +51,10 @@
             "bug_feature_keywords_weights_file": "app/bug-feature-keywords-weights.json",
             "category_keywords_file": "app/category-keywords.json",
             "category_keywords_weights_file": "app/category-keywords-weights.json"
+        },
+        "summarization": {
+            "num_clusters": 2,
+            "summary_length_per_cluster": 30
         }
     },
     "env_keys": [],
