fix: adding custom slack channle notification for each channel (#65)

--- a/app/sample-mint-config.json
+++ b/app/sample-mint-config.json
@@ -30,7 +30,8 @@
             "keyword_based_rules": {
                 "crash": []
             }
-        }
+        },
+        "custom_channels": []
     },
     "jira_config": {
         "base_url": "",
